@@ -9,6 +9,9 @@ Lib/
 * Added key-word argument authz_id to LDAPObject methods
   sasl_non_interactive_bind_s(), sasl_external_bind_s() and 
   sasl_gssapi_bind_s()
+* Hmmpf! Added missing self to LDAPObject.fileno().
+* ReconnectLDAPObject.sasl_bind_s() now correctly uses
+  generic wrapper arguments *args,**kwargs
 
 Doc/
 * Started missing docs for sub-module ldap.sasl.
@@ -1210,4 +1213,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.360 2015/10/24 15:42:41 stroeder Exp $
+$Id: CHANGES,v 1.361 2015/10/24 15:46:12 stroeder Exp $
